Fixed file paths

--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
     <meta name="viewport" content="width=device-width" />
     <link href='http://fonts.googleapis.com/css?family=Raleway:300' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" type="text/css" href="Styles.css" />
-    <link rel="stylesheet" type="text/css" href="ihover.min.css">
-    <link rel="stylesheet" type="text/css" href="pace.css" />
-    <script type="text/javascript" src="pace.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="assets/css/Styles.css" />
+    <link rel="stylesheet" type="text/css" href="assets/css/ihover.min.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/pace.css" />
+    <script type="text/javascript" src="assets/js/pace.min.js"></script>
     <style type="text/css">
     <!--
         body { 
@@ -18,14 +18,14 @@
 <html>
 <title>Scott's Webpage</title>
 <body>
-    <img class="test tilt-effect" data-tilt-options='{ "opacity" : 0.6, "extraImgs" : 4, "movement": { "perspective" : 1000, "translateX" : 15, "translateY" : 0, "translateZ" : 10, "rotateX" : 3, "rotateY" : 4, "rotateZ" : 1 } }' src="bg3.png" height="100%" width="100%">
+    <img class="test tilt-effect" data-tilt-options='{ "opacity" : 0.6, "extraImgs" : 4, "movement": { "perspective" : 1000, "translateX" : 15, "translateY" : 0, "translateZ" : 10, "rotateX" : 3, "rotateY" : 4, "rotateZ" : 1 } }' src="assets/img/bg3.png" height="100%" width="100%">
 
     <div id="MoiContainer" class = "cool" style="text-align:center;">
         <div id="MoiChild">
             <div id="One" class="ih-item circle colored effect19" >
                 <a href="#">
                     <div class="img pool">
-                        <img src="new.png" alt="img">
+                        <img src="assets/img/new.png" alt="img">
                     </div>
                     <div class="info">
                         <h3>Scott <br> Ouellette</h3>
@@ -36,19 +36,19 @@
             <br>
             <div id="Moi2" >
                 <a href="https://github.com/scottx611x">
-                    <img class="pool" id="GITHUB" src="Images/Github.png"/>
+                    <img class="pool" id="GITHUB" src="assets/img/Github.png"/>
                 </a>
                 <a href="http://www.linkedin.com/pub/scott-ouellette/69/2b/209/">
-                    <img class="pool" id="LINKEDIN" src="Images/Linkedin.png"/>
+                    <img class="pool" id="LINKEDIN" src="assets/img/Linkedin.png"/>
                 </a>
                 <a href="https://twitter.com/Scott_Ouellette">
-                    <img class="pool" id="TWITTER" src="Images/Twitter.png"/>
+                    <img class="pool" id="TWITTER" src="assets/img/Twitter.png"/>
                 </a>
                 <a href="https://www.facebook.com/scott.ouellette1">
-                    <img class="pool" id="FACEBOOK" src="Images/fb.png"/>
+                    <img class="pool" id="FACEBOOK" src="assets/img/fb.png"/>
                 </a>
                 <a href="http://instagram.com/scottyouellette11">
-                    <img class="pool" id="INSTAGRAM" src="Images/Instagram.png"/>
+                    <img class="pool" id="INSTAGRAM" src="assets/img/Instagram.png"/>
                 </a>
             </div>
             <br>
@@ -68,9 +68,9 @@
             </div>
         </div>
     </div>
-<script type="text/javascript" src="jquery-1.11.3.min.js"></script>
-<script type="text/javascript" src="jquery-ui.min.js"></script>
-<script type="text/javascript" src="tiltfx.js"></script>
+<script type="text/javascript" src="assets/js/jquery-1.11.3.min.js"></script>
+<script type="text/javascript" src="assets/js/jquery-ui.min.js"></script>
+<script type="text/javascript" src="assets/js/tiltfx.js"></script>
 
 <script type="text/javascript">
 window.onload = function(){
