Fixed flickering while hovering on circle links

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
     <div id="MoiContainer" class = "cool" style="text-align:center;">
         <div id="MoiChild">
+        <div class="pool" style="display: inline-block;">
             <div id="One" class="ih-item circle colored effect19" >
                 <a href="#">
                     <div class="img pool">
@@ -34,23 +35,24 @@
                 </a>
             </div>
             <br>
-            <div id="Moi2" >
+            <div id="Moi2">
                 <a href="https://github.com/scottx611x">
-                    <img class="pool" id="GITHUB" src="assets/img/Github.png"/>
+                    <img id="GITHUB" src="assets/img/Github.png"/>
                 </a>
                 <a href="http://www.linkedin.com/pub/scott-ouellette/69/2b/209/">
-                    <img class="pool" id="LINKEDIN" src="assets/img/Linkedin.png"/>
+                    <img id="LINKEDIN" src="assets/img/Linkedin.png"/>
                 </a>
                 <a href="https://twitter.com/Scott_Ouellette">
-                    <img class="pool" id="TWITTER" src="assets/img/Twitter.png"/>
+                    <img id="TWITTER" src="assets/img/Twitter.png"/>
                 </a>
                 <a href="https://www.facebook.com/scott.ouellette1">
-                    <img class="pool" id="FACEBOOK" src="assets/img/fb.png"/>
+                    <img id="FACEBOOK" src="assets/img/fb.png"/>
                 </a>
                 <a href="http://instagram.com/scottyouellette11">
-                    <img class="pool" id="INSTAGRAM" src="assets/img/Instagram.png"/>
+                    <img id="INSTAGRAM" src="assets/img/Instagram.png"/>
                 </a>
             </div>
+        </div>
             <br>
             <br>
             <div id="copy" class="text-muted" >
